# opengl-game

./: meson.build  sources.py
assets/: fragment.glsl  vertex.glsl
assets/shaders/: fragment.glsl  vertex.glsl
include/: camera.h  entity.h  mesh.h  model.h  object.h  shader.h  textures.h
old/: amesh.cc  amesh.h  camera.cc  camera.h  gl3_prototypes.h  main.cc  mesh.cc  mesh.h  model.cc  object.cc  shader.cc
src/: camera.cc  camera.cpp  entity.cc  main.cc  main.cpp  mesh.cc  mesh.cpp  mesh.hpp  model.cc  objloader.cpp  objloader.hpp  shader.cc  shader.cpp  shader.h  shader.hpp  textures.cc  textures.cpp  textures.hpp  tools.cc  tools.h
